[tool.poetry]
name = "essay-master"
version = "0.1.0"
description = ""
authors = ["istarwyh <yihui.wang@pku.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
agentuniverse = "^0.0.11"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
